@@ -397,7 +397,6 @@ ExecutionDialog::ExecutionDialog(frmMain *frame, pgObject *_object) : DialogWith
     txtMessages = 0;
 }
 
-
 void ExecutionDialog::OnClose(wxCloseEvent& event)
 {
     Abort();
