@@ -35,7 +35,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
-2006-05-24 DP  1.6.0  Use PQresultErrorField() to get more error details 
+2006-05-24 DP  1.6.0  Don't enable the OK button on the Grant Wizard until
+                      there is something to do, per Dave Minter.
+2006-05-24 DP  1.6.0  Use PQresultErrorField() to get more error details
                       from query results. Requires libpq 7.4+.
 2006-05-23 DP  1.6.0  Highlight the error word in the query tool if a syntax
                       error is reported by the database.
